--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #00162E;
-    --fundo-senha: #00244D;
-    --fundo-texto: #001E40;
+    --cor-de-fundo: #ac6ab9;
+    --fundo-senha: #fcb4ff;
+    --fundo-texto: #af07da;
     --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
