--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --branco: white;
     --cor-de-fundo: #ac6ab9;
-    --fundo-senha: #f23df8;
+    --fundo-senha: #8c0091;
     --fundo-texto: #af07da;
     --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
