--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #ac6ab9;
-    --fundo-senha: #8c0091;
-    --fundo-texto: #af07da;
+    --cor-de-fundo: #00162E;
+    --fundo-senha: #870b8b;
+    --fundo-texto: #87369b;
     --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
