--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #00162E;
     --fundo-senha: #870b8b;
     --fundo-texto: #87369b;
-    --borda: #0075FF;
+    --borda: #000000;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
