--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #00162E;
+    --cor-de-fundo: #ce76f1;
     --fundo-senha: #870b8b;
     --fundo-texto: #87369b;
     --borda: #000000;
