--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #ce76f1;
-    --fundo-senha: #870b8b;
-    --fundo-texto: #87369b;
+    --cor-de-fundo: #c000a6;
+    --fundo-senha: #7d3680;
+    --fundo-texto: #7d3680;
     --borda: #000000;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
