--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #c000a6;
+    --cor-de-fundo: #771a6b;
     --fundo-senha: #7d3680;
     --fundo-texto: #7d3680;
     --borda: #000000;
