--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --fundo-texto: #7d3680;
     --borda: #b300ca;
     --roboto: 'Roboto', sans-serif;
-    --roboto-mono: 'Roboto Mono', monospace;
+    --roboto-mono: 'Monaspace', monospace;
 }
 
 * {
