--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #771a6b;
     --fundo-senha: #7d3680;
     --fundo-texto: #7d3680;
-    --borda: #b300ca;
+    --borda: #4d0157;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Monaspace', monospace;
 }
